initial notes on javascript, reference w3schools - update 1

--- a/JavaScript/JS-03.html
+++ b/JavaScript/JS-03.html
@@ -1,6 +1,6 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1>JS:P01 > data-types : fundamental</h1>
+<h1>JS:P01 > data-types fundamentals</h1>
 <a href="JS-04.html">Next</a><a href="JS-02.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
