Initial notes on javascript, reference w3schools - updaate 3

--- a/JavaScript/JS-19.html
+++ b/JavaScript/JS-19.html
@@ -1,32 +1,59 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1>JS:P01 > coding-guide : part-two</h1>
-<a href="#">Next</a><a href="JS-18.html">Previous</a><a href="JS-01.html">Home</a>
+<h1>JS:P01 > version : part-two</h1>
+<a href="JS-20.html">Next</a><a href="JS-18.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
 
 <pre>
 --------------------------------------------------------------------------------
-Style Guide 
+JS 2009 (ES5)
 --------------------------------------------------------------------------------
+# ECMAScript 2009 (ES5) 
+- ECMAScript 2009, also known as ES5 =, was the first major version to javascript
+- this chapter describes the most important features of ES5 
 
+# ES5 features
+  > "use strict"
+  > String.trim() 
+  > Array.isArray() | Array.forEach() | Array.map() | Array.filter() | Array.reduce() | array.reduceRight() 
+  > Array.every() | Array.some() | array.indexOf() | Array.lastIndexOf() 
+  > JSON.parse() | JSON.stringify() 
+  > Date.now() 
+  > Property (Getters and Setters) 
+  > New Object Property Methods 
+  
+# ES5 Syntactical Changes 
+  > property access [] on strings 
+  > trailing commas in array and object literals 
+  > multi-line string literals 
+  > reserved words as property names 
+</pre>
+
+<pre>
 --------------------------------------------------------------------------------
-Best Practices 
+JS 2015 (ES6)
 --------------------------------------------------------------------------------
 
 </pre>
 
 <pre>
 --------------------------------------------------------------------------------
-Mistakes 
+JS 2016
 --------------------------------------------------------------------------------
 
 </pre>
 
 <pre>
 --------------------------------------------------------------------------------
-Performance 
+JS 2017
 --------------------------------------------------------------------------------
 
 </pre>
 
+<pre>
+--------------------------------------------------------------------------------
+JS 2018
+--------------------------------------------------------------------------------
+
+</pre>
