--- a/JavaScript/JS-18.html
+++ b/JavaScript/JS-18.html
@@ -1,6 +1,6 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1>JS:P01 > coding-guide : part-one</h1>
+<h1>JS:P01 > version : part-one</h1>
 <a href="JS-19.html">Next</a><a href="JS-17.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
@@ -9,36 +9,240 @@
 --------------------------------------------------------------------------------
 Reserved words
 --------------------------------------------------------------------------------
+# javascript reserved words
+- in javascript you cannot use these reserved words as variables, labels, or function names
+- words marked with (*) are new in ECMAScript 5 and 6 
+  > abstract      > arguments      > await*      
+  > boolean       > break          > byte
+  > case          > catch          > char      > class*      > const       > continue 
+  > debugger      > default        > delete    > do          > double     
+  > else          > enum*          > eval      > export*     > extends*
+  > false         > final          > finally   > float       > for         > function
+  > goto          
+  > if            > implements     > int       > interface
+  > let*          > long
+  > native        > new            > null
+  > package       > private        > protected > public
+  > return
+  > short         > static         > super*    > switch      > synchronized 
+  > this          > throw          > throws    > transient   > true         > try          > typeof
+  > var           > void           > volatile
+  > while         > with  
+  > yield
+  
+# removed reserved words
+- the following reserved words have been removed from the ECMAScript 5/6 standard 
+- don not use these words as variables. ECMAScript 5/6 does not have full support in all browsers 
+  > abstract
+  > boolean        > byte
+  > char
+  > double
+  > final          > float
+  > goto
+  > int 
+  > long 
+  > native
+  > short          > synchronized 
+  > throws
+  > transient
+  > volatile
 
+--------------------------------------------------------------------------------
+should not used as identifier (for internal conflict)
+--------------------------------------------------------------------------------
+# javascript objects, properties, and methods 
+- you should also avoid using the name of javascript built-in objects, properties, and methods 
+  > Array
+  > Date
+  > eval
+  > function
+  > hasOwnProperty
+  > Infinity          > isFinite          > isNaN          > isPrototypeOf
+  > length
+  > Math
+  > NaN               > name              > Number
+  > Object 
+  > prototype
+  > String
+  > toString
+  > undefined 
+  > valueOf
+  
+# HTML event handlers 
+- in addition you should avoid using the name of all HTML event handlers 
+- examples - 
+  > onblur          > onclick          > onerror          > onfocus
+  > onkeydown       > onkeypress       > onkeyup          > onmouseover 
+  > onload          > onmouseup        > onmousedown      > onsubmit
+
+--------------------------------------------------------------------------------
+should not used as identifier (for external conflict)
+--------------------------------------------------------------------------------
+# java reserved words 
+- javascript is often used together with java. 
+- you should avoid using some java objects and properties as javascript identifiers 
+  > getClass
+  > java
+  > JavaArray
+  > javaClass
+  > JavaObject
+  > JavaPackage 
+  
+# other reserved words 
+- javascript can be used as the programming language in many applications 
+- you should also avoid using the name of HTML and Window objects and properties 
+  > alert         > all                 > anchor          > anchors            > area          > assign
+  > blur          > button       
+  > checkbox      > clearInterval       > clearTimeout    > clientInformation  > close         > closed
+  > confirm       > constructor         > crypto
+  > decodeURI     > decodeURIComponent  > defaultStatus   > document
+  > element       > elements            > embed           > embeds             > encodeURI     > encodeURIComponent
+  > escape        > event
+  > fileUpload    > focus               > form            > forms              > frame
+  > innerHeight   > innerWidth
+  > layer         > layers              > link            > location 
+  > mimeTypes  
+  > navigate      > navigator
+  > frames        > frameRate
+  > history
+  > image         > images
+  > offscreenBuffering
+  > open          > opener              > option          > option             > outerHeight    > outerWidth
+  > packages      > pageXOffset         > pageYOffset     > parent             > parseFloat     > parseInt
+  > password      > pkcs11              > plugin          > prompt             > propertyIsEnum
+  > radio         > reset
+  > screenX       > screenY             > scroll          > secure             > select         > self
+  > setInterval   > setTimeout          > status          > submit
+  > taint         > text                > textarea        > top 
+  > unescape      > untaint
+  > window
 </pre>
 
 <pre>
 --------------------------------------------------------------------------------
 versions 
 --------------------------------------------------------------------------------
+# javascript versions 
+- javascript was invented by (Brendan Eich) in 1995, and became an (ECMA) standard 1997
+- ECMAScript is the official name of the language 
+- ECMAScript versions have been abbreviated to ES1, ES2, ES3, ES5 and ES6 
+- since 2016 new versions are named by year (ECMAScript 2016/2017/2018) 
 
+# ECMAScript Editions 
+  > ES1 (ECMAScript 1 - 1997) : first edition 
+  > ES2 (ECMAScript 2 - 1998) : editorial changes 
+  > ES3 (ECMAScript 3 - 1999) : added regular expressions | added try/catch
+  > ES4 (ECMAScript 4)        : never released 
+  > ES5 (ECMAScript 5 - 2009) : added ("strict mode" | JSON support | String.trim() | Array.isArray())
+                              : added (Array iteration methods)
+  > ES6 (ECMAScript 2015)     : added (let & const | default parameter values | Array.find() | Array.findIndex()) 
+  > ES  (ECMAScript 2016)     : added (exponential operator(**) | Array.prototype.includes)
+  > ES  (ECMAScript 2017)     : added (string padding | Object.entries | Object.values | async functions)
+                              : added (shared memory)
+  > ES  (ECMAScript 2018)     : added (rest/spread properties | asynchronous iteration | Promise.finally())
+                              : additions to RegExp
+
+# this tutorial covers every version of javascript
+  > the original javascript ES1 ES2 ES3 (1997-1999) 
+  > the first main revision ES5 (2009) 
+  > the second revision ES6 (2015) 
+  > the yearly additions (2016, 2017, 2018) 
+  
+# browser support 
+- browser support for ES5 (2009) 
+- IE9 does not support ECMAScript 5 ("use strict")
+- support : 2011 (IE 9*) | 2012 (Chrome 23 | IE / Edge 10 | Safari 6)| 2013 (Firefox 21 | Opera 15)
+
+- browser support for ES6 (2015) 
+- IE does not support ECMAScript 2015 
+- support : 2016 (chrome 51 | edge 14 | safari 10 | opera 38) | 2017 (Firefox 52) 
+
+- browser support for ECMAScript 2016 
+- support : 2016 (chrome 52 | edge 14 | opera 39) | 2017 (Firefox 54 | Safari 10.1) 
 </pre>
 
 <pre>
 --------------------------------------------------------------------------------
-JS Form
+history
 --------------------------------------------------------------------------------
+# javascript / ECMAScript 
+- javascript was invented by (Brendan Eich) in 1995
+- it was developed for (Netscape 2), and became the (ECMA-262) standard in 1997
+- after (netscape) handed javascript over to ECMA, the (mozilla) foundation continued to develop javascript for 
+  the (firefox) browser 
+- (mozilla's) latest version was 1.8.5 (identical to ES5) 
+- Internet Explorer (IE4) was the first browser to support (ECMA-262) edition 1 (ES1) 
+  *Internet Explorer 9 (IE9) did not support ES5 ("use strict")
+  > 1995 :: invented by (Brendan Eich)
+  > 1996 :  (Netscape 2) was released with javascript 1.0
+  > 1997 :: became ECMA Standard (ECMA-262) | ECAMScript 1 (ES1) was released | IE4 was the first browser support
+  > 1998 :: ECMAScript 2 was release | (Netscape 42) was released with javascript 1.3
+  > 1999 :: ECMAScript 3 was released | IE5 was the first browser support 
+  > 2000 :  IE5.5 was the first browser support | Netscape 62 and Firefox 1 was released with JS1.5
+  > 2008 :: ECMAScript 4 was abandoned 
+  > 2009 :: ECMAScript 5 was release 
+  > 2011 :  IE9 was the first browser support | firefox 4 was release with JS1.8.5
+  > 2012 :  full support for ES5 in safari 6, IE 10, and Chrome 23
+  > 2013 :  full support for ES5 in firefox 21 and opera 15
+  > 2014 :: full support for ES5 in all browsers 
+  > 2015 :: ECMAScript 6 was release | full support for ES6 in firefox 52
+  > 2016 :  full support for ES6 in chrome 51, opera 38, edge 14, and safari 10
+  > 2018 :: full support for ES6 in all browsers 
+  
+# the ECMA technical committee 39 
+- in 1996, Netscape and Brendan Eich took javascript to the ECMA international standards organization, 
+  and a technical committee (TC39) was created to develop the language 
+- ECMA-262 edition 1 was released in june 1997
 
+# from ES4 to ES6 
+- when the (TC39) committee got together in (Oslo in 2008), to agree on (ECMAScript 4), 
+  they were divided into 2 different camps - 
+  > the (ECMAScript 3.1) camp : Microsoft and Yahoo who wanted an incremental upgrade from (ES3) 
+  > the (ECMAScript 4) camp   : Adobe, Mozilla, Opera, and Google who wanted a massive (ES4) upgrade 
+- august 13 2008, (Brendan Eich) wrote an email, and the solution was to work together 
+  > ECMAScript 4 was renamed to ES5 
+  > ES5 should be an incremental upgrade of ECMAScript 3 
+  > features of ECMAScript 4 should be picked up in later versions 
+  > (TC39) sould develop a new major release, bigger in scope than ES5
+- the planned new release (ES6) was code-named (Harmony), because of the split it created?
+
+- ES5 was a huge success. it was released in 2009, and all major browsers (including IE) 
+  were full compliant by 2013
+  2012 (chrome 23 | IE10/edge | safari 6) | 2013 (firefox21 | opera 15) 
+  
+- ES6 was also a huge success. it ws released in 2015, and all major browsrs wer fully compliant by 2017 
+  2017 (firefox 52) | 2016 (chrome 51 | edge 14 | safari 10 | opera 38) 
 </pre>
 
-<pre>
---------------------------------------------------------------------------------
-JSON
---------------------------------------------------------------------------------
-
-</pre>
 
 
-<pre>
---------------------------------------------------------------------------------
-Debugging 
---------------------------------------------------------------------------------
 
-</pre>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
