Initial notes on javascript, reference w3schools - update 5

--- a/JavaScript/JS-18.html
+++ b/JavaScript/JS-18.html
@@ -1,6 +1,6 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1>JS:P02 > version : part-one</h1>
+<h1 id="P02">JS:P02 > version : part-one</h1>
 <a href="JS-19.html">Next</a><a href="JS-17.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
