--- a/JavaScript/JS-19.html
+++ b/JavaScript/JS-19.html
@@ -1,6 +1,6 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1>JS:P02 > version : part-two</h1>
+<h1 id="P02">JS:P02 > version : part-two</h1>
 <a href="JS-20.html">Next</a><a href="JS-18.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
