--- a/JavaScript/JS-20.html
+++ b/JavaScript/JS-20.html
@@ -1,6 +1,6 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1>JS:P02 > coding-guide</h1>
+<h1 id="P02">JS:P02 > coding-guide</h1>
 <a href="JS-21.html">Next</a><a href="JS-19.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
