--- a/JavaScript/JS-21.html
+++ b/JavaScript/JS-21.html
@@ -1,6 +1,6 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1>JS:P03 > JS-FORM and WEB-APIs</h1>
+<h1 id="P03">JS:P03 > JS HTML-DOM : part-one</h1>
 <a href="JS-22.html">Next</a><a href="JS-20.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
