--- a/JavaScript/JS-23.html
+++ b/JavaScript/JS-23.html
@@ -1,6 +1,6 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1>JS:P03 > AJAX</h1>
+<h1 id="P03">JS:P03 > JS HTML-DOM : part-three</h1>
 <a href="JS-24.html">Next</a><a href="JS-22.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
