--- a/JavaScript/JS-25.html
+++ b/JavaScript/JS-25.html
@@ -1,7 +1,7 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1 id="P03">JS:P03 > JS HTML-DOM : part-four</h1>
-<a href="JS-25.html">Next</a><a href="JS-23.html">Previous</a><a href="JS-01.html">Home</a>
+<h1 id="P03">JS:P03 > JS BOM : part-one</h1>
+<a href="JS-26.html">Next</a><a href="JS-24.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
 
