--- a/JavaScript/JS-28.html
+++ b/JavaScript/JS-28.html
@@ -1,18 +1,16 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1 id="P03">JS:P03 > JS HTML-DOM : part-four</h1>
-<a href="JS-25.html">Next</a><a href="JS-23.html">Previous</a><a href="JS-01.html">Home</a>
+<h1 id="P04">JS:P04 > JSON</h1>
+<a href="JS-29.html">Next</a><a href="JS-27.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
 
 <pre>
 --------------------------------------------------------------------------------
-jQuery
+JSON
 --------------------------------------------------------------------------------
 
 </pre>
-
-
 
 
 
